package com.geduo.datacollect.bean;

/**
 * Description: <><br>
 * Author:      gxl<br>
 * Date:        2018/12/6<br>
 * Version:     V1.0.0<br>
 * Update:     <br>
 */
public class Media {
}
